# OpenGLSample

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  myapp  myapp.cbp
glad/: Glad.cbp  Makefile  cmake_install.cmake
glad/include/glad/: glad.h
glad/src/: glad.c
res/shaders/: shader.vs
src/: main.cpp  shader.h
